--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -6,6 +6,15 @@
   > * {
     padding-left: 30px;
   }
+  a:link {
+    color: $secondary-color;
+    text-decoration: underline;
+  }
+
+  a:visited {
+    color:$secondary-color;
+    text-decoration: underline;
+  } 
 }
     p {
       width: 55%;
@@ -18,7 +27,3 @@
       margin-bottom: 30px;
   }
 
-  a:link {
-    color: $secondary-color;
-    text-decoration: none;
-  }
