--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -23,14 +23,14 @@ a:hover {
   text-decoration: underline;
 }
 
-// also I SWEAR to you that I got the freaking underline while hovering to work, but for some reason 
+// also I SWEAR to you that I got the freaking underline while hovering to work, but for some reason I messed with it too much and then it stopped working and then I commanded z a bunch of times and it still isn't working and I just don't know what happened. And it's sort of sad because out of all the stuff that thing was the one thing I actually accomplished. 
 
 // #l-link {
 //   color: $primary-color;
 //   text-decoration: none;
 // }
 
-// I honestly don't know how to seperate the links. When I did b:link, it imediatley changed to the seocndary color (rn the content link is blending into the primary color.. like the link is there but it's blending into the primary color. I could just change the color of the links all together, but that would just defeat the whole point of learning how to separate them. Also when I did b:link-- my freaking cs hover feature stopped working.
+// I honestly don't know how to seperate the links. When I did b:link, it imediatley changed to the secndary color (rn the content link is blending into the primary color.. like the link is there but it's blending into the primary color. I could just change the color of the links all together, but that would just defeat the whole point of learning how to separate them. Also when I did b:link-- my freaking cs hover feature stopped working.
 
 // b:link {
   //color: $secondary-color;
